fixed hover effect on mobile

--- a/assets/styles/_historyWindow.scss
+++ b/assets/styles/_historyWindow.scss
@@ -126,15 +126,17 @@
     
 .not-achieved{
     background-color: rgb(226, 77, 77);
+}
+
+.red-hover{
     @include dateRedHoverEffect;
 }
 
-
-
+.green-hover{
+    @include dateGreenHoverEffect;
+}
 .achieved {
     background-color:rgb(18, 175, 18);
-    @include dateGreenHoverEffect;
-
 }
 
 
