--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -586,20 +586,20 @@ main .undo:hover {
   background-color: #e24d4d;
 }
 
-.not-achieved:hover {
+.red-hover:hover {
   background-color: #ff1818;
   box-shadow: 0 0 50px #ff1818;
   transform: scale(1.2);
 }
 
-.achieved {
-  background-color: #12af12;
-}
-
-.achieved:hover {
+.green-hover:hover {
   background-color: #39ff14;
   box-shadow: 0 0 50px #39ff14;
   transform: scale(1.2);
+}
+
+.achieved {
+  background-color: #12af12;
 }
 
 .red-legend {
